@@ -67,11 +67,11 @@
 
 
 /* Calculate the number of options we need to store */
-#define OPTIONS_SIZE    121
+#define OPTIONS_SIZE    122
 static int PYCURL_OPT(int o)
 {
-#if (LIBCURL_VERSION_NUM >= 0x070b01)
-    COMPILE_TIME_ASSERT(OPTIONS_SIZE == CURLOPT_POSTFIELDSIZE_LARGE + 1 - CURLOPTTYPE_OFF_T)
+#if (LIBCURL_VERSION_NUM >= 0x070b02)
+    COMPILE_TIME_ASSERT(OPTIONS_SIZE == CURLOPT_TCP_NODELAY + 1)
 #endif
     assert(o >= CURLOPTTYPE_OBJECTPOINT);
     assert(o < CURLOPTTYPE_OBJECTPOINT + OPTIONS_SIZE);
@@ -2546,6 +2546,10 @@ initpycurl(void)
     insint_c(d, "MAXFILESIZE_LARGE", CURLOPT_MAXFILESIZE_LARGE);
     insint_c(d, "RESUME_FROM_LARGE", CURLOPT_RESUME_FROM_LARGE);
     insint_c(d, "INFILESIZE_LARGE", CURLOPT_INFILESIZE_LARGE);
+#endif
+
+#if (LIBCURL_VERSION_NUM >= 0x070b02)
+    insint_c(d, "TCP_NODELAY", CURLOPT_TCP_NODELAY);
 #endif
 
 #ifdef CURL_VERSION_LARGEFILE
